mvn compile  stage