@@ -11,10 +11,11 @@ pipeline {
                 )
             }
         }
+
         stage('Maven Compile') {
             steps {
                 echo 'Maven Compile started'
-                sh 'mvn compile'
+                sh 'export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED" && mvn compile'
             }
         }
     }
